--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,17 @@
     <string name="switch_custom">Switch to custom actions example</string>
     <string name="switch_media_session">Switch to using MediaSession</string>
     <string name="title_bigbuckbunny">Big Buck Bunny</string>
+
+    <string name="loginActivity">登录</string>
+    <string name="BottomAppbarActivity">底部导航</string>
+    <string name="YoukuMainActivity">优酷</string>
+    <string name="FoldActivity">吸顶</string>
+    <string name="MediaSessionPlaybackActivity">悬浮播放</string>
+    <string name="LifecycleActivity">生命周期</string>
+    <string name="MediaActivity">悬浮播放</string>
+    <string name="DialogFollowActivity">悬浮变色</string>
+    <string name="SmartActivity">上拉加载</string>
+    <string name="TextAnnotationActivity">findviewbyid注解</string>
+    <string name="LoginActivity">room</string>
+    <string name="MainActivity">主页</string>
 </resources>
